k8s/service-student-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: juice-shop-service
spec:
  type: NodePort
  selector:
    app: juice-shop
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30002
