k8s/networkpolicy-deny-all-student-a.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: student-a
spec:
  podSelector: {}
  policyTypes:
    - Ingress
